[gd_scene load_steps=26 format=3 uid="uid://djgkxj2yukby3"]

[ext_resource type="Script" uid="uid://2gvwkw6kk7fw" path="res://script/DynamicLoader.gd" id="1_qpyb5"]
[ext_resource type="Texture2D" uid="uid://bai0ilin7ncxj" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/clouds_mg_1_lightened.png" id="2_0i2aa"]
[ext_resource type="Texture2D" uid="uid://8ldjcw3efsy1" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/glacial_mountains_lightened_Long_Diff.png" id="2_2ysum"]
[ext_resource type="Script" uid="uid://w45lbd87frvd" path="res://script/background.gd" id="2_71cwf"]
[ext_resource type="Texture2D" uid="uid://cvht5puhcrmwt" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/clouds_mg_2.png" id="2_ywy2r"]
[ext_resource type="Script" uid="uid://bkvr1coosdhlx" path="res://scenes/WinPopup.gd" id="3_0i2aa"]
[ext_resource type="Texture2D" uid="uid://ddb7sngaqsi0s" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/clouds_mg_1.png" id="3_aa7vf"]
[ext_resource type="Texture2D" uid="uid://c3otrdumkk027" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/glacial_mountains_lightened_Small.png" id="3_bwo3e"]
[ext_resource type="FontFile" uid="uid://ctf2pk0x6asf8" path="res://School Teachers.otf" id="3_ycdxj"]
[ext_resource type="Script" uid="uid://hsboey4lj27o" path="res://script/SequenceBtns.gd" id="4_vuvn0"]
[ext_resource type="Texture2D" uid="uid://bd3uhdt7g25i6" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/glacial_mountains_lightened.png" id="4_xgm7k"]
[ext_resource type="Texture2D" uid="uid://c8d1rdkydnu57" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/glacial_mountains_lightened_Other.png" id="5_ywy2r"]
[ext_resource type="Texture2D" uid="uid://dsx4jo0smqce5" path="res://assets/BG_DesertMountains/cloud2.png" id="9_miyxp"]
[ext_resource type="Texture2D" uid="uid://m3xfe3gc5k2i" path="res://assets/BG_DesertMountains/cloud1.png" id="10_dd1u6"]
[ext_resource type="Texture2D" uid="uid://dr7t0t2hheydd" path="res://assets/BG_DesertMountains/cloud5.png" id="11_miyxp"]
[ext_resource type="Texture2D" uid="uid://da10ex0gor5r8" path="res://assets/BG_DesertMountains/cloud8.png" id="12_dd1u6"]
[ext_resource type="Texture2D" uid="uid://b4mgloarrn1ko" path="res://assets/BG_DesertMountains/cloud7.png" id="13_dd1u6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7byrd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f75ws"]
bg_color = Color(0.214923, 0.613613, 0.999999, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dysao"]
bg_color = Color(0.367501, 0.675869, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fusle"]
bg_color = Color(0.591849, 0.822409, 0.999619, 1)
skew = Vector2(0.05, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 20
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 8
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3dcp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_168um"]
bg_color = Color(0.214923, 0.613613, 0.999999, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqt71"]
bg_color = Color(0.367501, 0.675869, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdeje"]
bg_color = Color(0.591849, 0.822409, 0.999619, 1)
skew = Vector2(0.05, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 20
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 8
anti_aliasing_size = 10.0

[node name="Temp" type="Node2D"]
script = ExtResource("1_qpyb5")

[node name="UI" type="ColorRect" parent="."]
offset_right = 1155.0
offset_bottom = 649.0
color = Color(0.341176, 0.72549, 0.984314, 1)

[node name="Background" type="MarginContainer" parent="UI"]
layout_mode = 2
offset_right = 1155.0
offset_bottom = 649.0
script = ExtResource("2_71cwf")

[node name="CloudTop" type="Sprite2D" parent="UI/Background"]
position = Vector2(958, 107)
rotation = -3.11192
texture = ExtResource("2_ywy2r")

[node name="CloudsMg1Lightened" type="Sprite2D" parent="UI/Background/CloudTop"]
position = Vector2(379.259, -21.8367)
rotation = -0.0349033
scale = Vector2(3.00179, 1.11288)
texture = ExtResource("2_0i2aa")

[node name="CloudsMg1" type="Sprite2D" parent="UI/Background/CloudTop"]
position = Vector2(470.044, -22.3526)
scale = Vector2(1.5888, 1.04167)
texture = ExtResource("3_aa7vf")

[node name="GlacialMountains" type="Sprite2D" parent="UI/Background"]
position = Vector2(250.875, 624.5)
scale = Vector2(0.925266, 0.412037)
texture = ExtResource("2_2ysum")

[node name="GlacialMountainsLightenedSmall" type="Sprite2D" parent="UI/Background/GlacialMountains"]
position = Vector2(262.412, 82.7999)
scale = Vector2(0.990233, 1.45)
texture = ExtResource("3_bwo3e")

[node name="GlacialMountainsLightenedSmall2" type="Sprite2D" parent="UI/Background/GlacialMountains"]
position = Vector2(701.085, 79.1999)
scale = Vector2(0.990233, 1.8)
texture = ExtResource("3_bwo3e")

[node name="GlacialMountainsLightened" type="Sprite2D" parent="UI/Background/GlacialMountains/GlacialMountainsLightenedSmall2"]
position = Vector2(-80, -22.3125)
scale = Vector2(1.07943, 0.586227)
texture = ExtResource("4_xgm7k")

[node name="GlacialMountainsLightenedOther" type="Sprite2D" parent="UI/Background/GlacialMountains/GlacialMountainsLightenedSmall2"]
position = Vector2(194.204, -16)
scale = Vector2(1.28186, 1)
texture = ExtResource("5_ywy2r")

[node name="GlacialMountainsLightened" type="Sprite2D" parent="UI/Background/GlacialMountains"]
position = Vector2(392.539, 0.529324)
scale = Vector2(1.11817, 0.838235)
texture = ExtResource("4_xgm7k")

[node name="Clouds1" type="MarginContainer" parent="UI/Background"]
visible = false
layout_mode = 2

[node name="Cloud2" type="Sprite2D" parent="UI/Background/Clouds1"]
position = Vector2(1023, 436)
texture = ExtResource("9_miyxp")

[node name="Cloud1" type="Sprite2D" parent="UI/Background/Clouds1"]
position = Vector2(176.5, 482.75)
scale = Vector2(3.23913, 2.78571)
texture = ExtResource("10_dd1u6")

[node name="Cloud3" type="Sprite2D" parent="UI/Background/Clouds1"]
position = Vector2(145, 148.25)
scale = Vector2(2.69565, 3.97619)
texture = ExtResource("10_dd1u6")

[node name="Cloud4" type="Sprite2D" parent="UI/Background/Clouds1"]
position = Vector2(1002, 464)
texture = ExtResource("9_miyxp")

[node name="Clouds2" type="MarginContainer" parent="UI/Background"]
visible = false
layout_mode = 2

[node name="Cloud5" type="Sprite2D" parent="UI/Background/Clouds2"]
position = Vector2(1014, 119)
scale = Vector2(2.1, 2.35714)
texture = ExtResource("11_miyxp")

[node name="Cloud8" type="Sprite2D" parent="UI/Background/Clouds2"]
position = Vector2(70, 493)
texture = ExtResource("12_dd1u6")

[node name="Cloud9" type="Sprite2D" parent="UI/Background/Clouds2"]
position = Vector2(330, 89)
texture = ExtResource("12_dd1u6")

[node name="Cloud1" type="Sprite2D" parent="UI/Background/Clouds2"]
position = Vector2(201, 81)
scale = Vector2(1.69565, 1.59524)
texture = ExtResource("10_dd1u6")

[node name="Cloud2" type="Sprite2D" parent="UI/Background/Clouds2"]
position = Vector2(428.75, 135.5)
scale = Vector2(0.758503, 0.759259)
texture = ExtResource("9_miyxp")

[node name="Clouds3" type="MarginContainer" parent="UI/Background"]
visible = false
layout_mode = 2

[node name="Cloud8" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(405.75, 535.25)
scale = Vector2(1.44937, 1.18293)
texture = ExtResource("12_dd1u6")

[node name="Cloud7" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(507, 551)
texture = ExtResource("13_dd1u6")

[node name="Cloud9" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(785, 537)
texture = ExtResource("13_dd1u6")

[node name="Cloud1" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(96, 534)
texture = ExtResource("10_dd1u6")

[node name="Cloud2" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(661, 29)
texture = ExtResource("9_miyxp")

[node name="Cloud3" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(228, 40)
scale = Vector2(1.76087, 1.92857)
texture = ExtResource("10_dd1u6")

[node name="Cloud10" type="Sprite2D" parent="UI/Background/Clouds3"]
position = Vector2(975, 57)
texture = ExtResource("12_dd1u6")

[node name="Clouds4" type="MarginContainer" parent="UI/Background"]
visible = false
layout_mode = 2

[node name="Cloud5" type="Sprite2D" parent="UI/Background/Clouds4"]
position = Vector2(969, 124)
texture = ExtResource("9_miyxp")

[node name="Cloud7" type="Sprite2D" parent="UI/Background/Clouds4"]
position = Vector2(115, 100)
texture = ExtResource("13_dd1u6")

[node name="Cloud1" type="Sprite2D" parent="UI/Background/Clouds4"]
position = Vector2(846, 108)
texture = ExtResource("10_dd1u6")

[node name="Cloud2" type="Sprite2D" parent="UI/Background/Clouds4"]
position = Vector2(899, 136)
texture = ExtResource("10_dd1u6")

[node name="Cloud4" type="Sprite2D" parent="UI/Background/Clouds4"]
position = Vector2(882, 124)
texture = ExtResource("10_dd1u6")

[node name="Cloud3" type="Sprite2D" parent="UI/Background/Clouds4"]
position = Vector2(900, 112)
texture = ExtResource("10_dd1u6")

[node name="Margins" type="MarginContainer" parent="UI"]
layout_mode = 2
offset_right = 1155.0
offset_bottom = 649.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="Body" type="VBoxContainer" parent="UI/Margins"]
layout_mode = 2

[node name="Question" type="HBoxContainer" parent="UI/Margins/Body"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/Body/Question"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="UI/Margins/Body/Question/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 85
text = "Attacker Level 1"
horizontal_alignment = 1

[node name="Description" type="MarginContainer" parent="UI/Margins/Body"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="CenterContainer" type="CenterContainer" parent="UI/Margins/Body/Description"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Margins/Body/Description/CenterContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "You found a login form that checks for username and password. 
The query used is:\"SELECT * FROM users WHERE username = 'INPUT' AND password = 'INPUT';

You must log in without knowing the correct password!"
horizontal_alignment = 1

[node name="Sequencer" type="MarginContainer" parent="UI/Margins/Body"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
script = ExtResource("4_vuvn0")
Sequence = Array[String](["UNION SELECT", "id,", "username,", "password", "FROM users;"])
Duds = Array[String](["age,", "clients"])

[node name="Body" type="VBoxContainer" parent="UI/Margins/Body/Sequencer"]
layout_mode = 2

[node name="TopBar" type="ColorRect" parent="UI/Margins/Body/Sequencer/Body"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0.541176, 0.541176, 0.541176, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/Body/Sequencer/Body/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="Selected" type="Label" parent="UI/Margins/Body/Sequencer/Body/TopBar/MarginContainer"]
modulate = Color(0.820977, 0.868654, 0.603199, 1)
layout_mode = 2
text = "Selected: <NULL>"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Margins/Body/Sequencer/Body"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="UI/Margins/Body/Sequencer/Body/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsParent" type="HBoxContainer" parent="UI/Margins/Body/Sequencer/Body/ScrollContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="UI/Margins/Body/Sequencer/Body"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="MarginSubmit" type="MarginContainer" parent="UI/Margins/Body/Sequencer/Body/Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Submit" type="Button" parent="UI/Margins/Body/Sequencer/Body/Buttons/MarginSubmit"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_color = Color(0, 0.558128, 0.986688, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7byrd")
theme_override_styles/hover = SubResource("StyleBoxFlat_f75ws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dysao")
theme_override_styles/normal = SubResource("StyleBoxFlat_fusle")
text = "submit"

[node name="MarginReset" type="MarginContainer" parent="UI/Margins/Body/Sequencer/Body/Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Reset" type="Button" parent="UI/Margins/Body/Sequencer/Body/Buttons/MarginReset"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_color = Color(0, 0.558128, 0.986688, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7byrd")
theme_override_styles/hover = SubResource("StyleBoxFlat_f75ws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dysao")
theme_override_styles/normal = SubResource("StyleBoxFlat_fusle")
text = "REset"

[node name="BottomBar" type="MarginContainer" parent="UI/Margins/Body"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Margins/Body/BottomBar"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/Body/BottomBar/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/Body/BottomBar/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 35

[node name="GoBackButton" type="Button" parent="UI/Margins/Body/BottomBar/HBoxContainer2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 2.0
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_color = Color(0, 0.558128, 0.986688, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3dcp")
theme_override_styles/hover = SubResource("StyleBoxFlat_168um")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vqt71")
theme_override_styles/normal = SubResource("StyleBoxFlat_vdeje")
text = "Go Back
"

[node name="Label" type="Label" parent="UI/Margins/Body/BottomBar/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "*HINT* : Use the given Buttons to access the data"

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/Body/BottomBar/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 120

[node name="Label2" type="Label" parent="UI/Margins/Body/BottomBar/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 21
text = "Attempts: 0"

[node name="WinPopup" type="MarginContainer" parent="UI/Margins"]
z_index = 1
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 50
script = ExtResource("3_0i2aa")

[node name="ColorRect" type="ColorRect" parent="UI/Margins/WinPopup"]
layout_mode = 2
focus_mode = 2
color = Color(0.658824, 0.827451, 0.968627, 0.901961)

[node name="Background" type="MarginContainer" parent="UI/Margins/WinPopup/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/WinPopup/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 65
text = "Correct Answer!"
horizontal_alignment = 1

[node name="Body" type="MarginContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Body"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Body/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Good Work!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="MarginContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2

[node name="MarginMenu" type="MarginContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Menu" type="Button" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons/HBoxContainer/MarginMenu"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_color = Color(0, 0.558128, 0.986688, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7byrd")
theme_override_styles/hover = SubResource("StyleBoxFlat_f75ws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dysao")
theme_override_styles/normal = SubResource("StyleBoxFlat_fusle")
text = "Back To Menu"

[node name="MarginNext" type="MarginContainer" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Next" type="Button" parent="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons/HBoxContainer/MarginNext"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_color = Color(0, 0.558128, 0.986688, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_fonts/font = ExtResource("3_ycdxj")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7byrd")
theme_override_styles/hover = SubResource("StyleBoxFlat_f75ws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dysao")
theme_override_styles/normal = SubResource("StyleBoxFlat_fusle")
text = "Next Level"

[connection signal="pressed" from="UI/Margins/Body/BottomBar/HBoxContainer2/HBoxContainer/MarginContainer/GoBackButton" to="." method="GoBack_pressed"]
[connection signal="button_down" from="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons/HBoxContainer/MarginMenu/Menu" to="UI/Margins/WinPopup" method="_on_menu_button_down"]
[connection signal="button_down" from="UI/Margins/WinPopup/ColorRect/MarginContainer/VBoxContainer/Buttons/HBoxContainer/MarginNext/Next" to="UI/Margins/WinPopup" method="LoadNextLevel"]
